# MyAssignments

./: CMakeLists.txt  EnterData.cpp  bisection.cpp  diamond  diamond.cpp  div.cpp  factorial  factorial.cpp  lab0102.txt  lab0103.txt  lab0201.txt  lab0202  lab0202.cpp  lab0302.txt  pay  pay.cpp  pi  pi.cpp  quadratic  quadratic.cpp  runtime_errors  square  square.cpp  teach  teach.cpp  triangle  triangle.cpp  wdhms.cpp  wind.cpp
diamond.dSYM/Contents/Resources/DWARF/: diamond
diamond.dSYM/Contents/Resources/Relocations/aarch64/: diamond.yml
pi.dSYM/Contents/Resources/DWARF/: pi
pi.dSYM/Contents/Resources/Relocations/aarch64/: pi.yml
