cmake_minimum_required(VERSION 4.0)
project(SYDE121)

set(CMAKE_CXX_STANDARD 14)

add_executable(
        EnterData.cpp
        lab0202.cpp
        div.cpp
        wdhms.cpp
        wind.cpp
        square.cpp
        square.h
        square.cpp
        factorial.cpp
        teach.cpp
        diamond.cpp
        pay.cpp
        pi.cpp
        quadratic.cpp
        triangle.cpp
        bisection.cpp
)
